--- a/html/img.html
+++ b/html/img.html
@@ -28,7 +28,17 @@
       -->
     <img src = "image/profile.jpg">
     <img src = "image/instagramlogo.png" width="50%">
-    
+
+    <!-- 
+        경로
+        절대경로 : 특정문서 페이지 또는 이미지등 자원에 접근할 수 있는 전체 URL
+                   photo.png 파일이 /web/public/img/photo.png에 있다면
+                   <a href = "/web/public/img/photo.png"> 로 사용가능
+
+        상대경로 : photo.png 파일이 /web/public/img/photo.png 에 있는데
+                   현재 작업하고 있는 파일의 위치가 /web/public 있다면
+                   <a href = "/img/photo.png"> 로 사용가능
+    -->
 
 </body>
 </html>
