--- a/css/class.html
+++ b/css/class.html
@@ -13,6 +13,10 @@
             h1 {
                 color: brown;
             }
+            .headings {
+                color: tan; /* 그룹으로 묶어서 스타일을 줄 때 유용하다. */
+            }
+            
         </style>
 
         <!-- 링크 방식 -->
@@ -23,10 +27,11 @@
         <!-- 인라인 방식 -->
         <p style = "color: red;">인라인 스타일 방식</p>
         <h1>클래스 선택자를 이용한 선택</h1>
-        <h2>이 부분에 스타일을 적용합니다.</h2>
+        <h2 class = "headings">이 부분에 스타일을 적용합니다.</h2>
+        <h3>클래스가 없는 h3</h3>
         <p>클래스 선택자를 이용하여 스타일을 적용할 HTML 요소들을 한 번에 선택할 수 있습니다.</p>
-        <h3>이 부분에도 같은 스타일을 적용합니다.</h3>
-        <h3>이 부분에는 다른 스타일과 추가 스타일을 적용합니다.</h3>
+        <h3 class = "headings">이 부분에도 같은 스타일을 적용합니다.</h3>
+        <h3 class = "headings2">이 부분에는 다른 스타일과 추가 스타일을 적용합니다.</h3>
     </body>
 
 </html>
