--- a/js/exam1.html
+++ b/js/exam1.html
@@ -165,7 +165,32 @@
             result = x == y ? "x는 y보다 큽니다." : "x는 y보다 작습니다.";
             document.write("result : ", result, "<br>");
             
+            document.write("<hr>");
 
+            let a_num, b_num;
+            a_num = b_num = 3 + 4 * 5;
+            
+            document.write("result : ", a_num, " :: ", b_num, "<br>");
+
+            let x2;
+            x2 = 10 / 2 * 3;
+            document.write("result : ", x2, "<br>");
+
+            let num_result;
+
+            num_result = 5 + 3 > 7 && 2 < 4;
+
+            document.write("result : ", num_result, "<br>");
+
+            let a2, b2, c2, total
+            total = (a2 = 2) + (b2 = 3) * (c2 = 4)
+            document.write("result : ", total, "<br>");
+            document.write("result : ", a2, " : ", b2, " : ", c2, "<br>");
+
+            let a3, x3;
+            x3 = (a3 = 5) > 3 ? a3 * 2 : a3 / 2;
+
+            document.write("result : ", a3, " : ",x3, "<br>");
         </script>
     </head>
     <body>
