--- a/js/ex05_if.html
+++ b/js/ex05_if.html
@@ -18,6 +18,19 @@
             if (조건식) {
                 조건식이 참일 때 실행할 명령;
             }
+            
+            제어문 (반복문)
+            특정 명령을 내가 원하는 횟수만큼 반복해주는 문법
+
+            for (초기식; 조건식; 증감식;) {
+                반복하고자 하는 명령1
+                반복하고자 하는 명령2
+                반복하고자 하는 명령3
+            }
+
+            while (조건식) {
+
+            }
         */
 
         let x = 10;
